# HackArena2.5-StereoTanks

./: .editorconfig  .gitignore  .gitmodules  HackArena24H2_Windows.sln  HackArenaGame_Linux.sln  MonoTanks_Linux.sln  MonoTanks_Windows.sln  MonoTanks_Windows.slnLaunch  MonoTanks_macOS.sln  README.md
Bots/Hard/: .gitignore  CMakeLists.txt  Dockerfile  README.md  run_tests.py  vcpkg.json
Bots/Hard/src/: handler.cpp  handler.h  main.cpp  packet.h  pch.h  processed-packets.h  web-socket-client.cpp  web-socket-client.h
Bots/Hard/src/bot/: bot.cpp  bot.h  utils.h
GameClient/: GameClient.cs  GameClientCore.cs  GameClient_Linux.csproj  GameClient_Windows.csproj  GameClient_macOS.csproj  MonoTanks.cs  Program.cs  app.manifest  stylecop.json
GameClient/Content/: Content.npl
GameClient/Source/: CommandParser.cs  CrashService.cs  DebugConsole.cs  GameSettings.cs  ISprite.cs  LocalizedString.cs  Sprite.cs
GameLogic/: GameLogic.csproj  GameLogic.projitems  GameLogic.shproj
GameLogic/Abilities/: BulletAbility.cs  DoubleBulletAbility.cs  HealingBulletAbility.cs  LaserAbility.cs  MineAbility.cs  RadarAbility.cs  StunBulletAbility.cs
GameLogic/Coliisions/: BorderCollision.cs  BulletCollision.cs  WallCollision.cs
GameServer/: CommandLineOptions.cs  CommandLineParser.cs  Connection.cs  ConnectionData.cs  GameInstance.cs  GameManager.cs  GameServer.csproj  GameServer_Linux.csproj  GameServer_Windows.csproj  GameServer_macOS.csproj  GameStatus.cs  Main.cs  PacketHandler.cs  PacketLogger.cs  PayloadHelper.cs  Player.cs  PlayerConnectionData.cs  PreciseTimer.cs  Program.cs  ResponsePacket.cs
Scripts/: BuildAll.ps1  BuildStereo.ps1  ZipAllBuilds.ps1  bundle-publish.sh  publish_all.sh
(+386 files in other folders)
